<resources>

    <array name="languages" translatable="false">
        <item>ENG</item>
        <item>ITA</item>
        <item>ESP</item>
        <item>FRA</item>
    </array>

    <string name="app_name" translatable="false">Glider</string>
    <string name="create">Create</string>
    <string name="insert">Insert</string>
    <string name="passwords" translatable="false">Passwords</string>
    <string name="removed">Removed</string>
    <string name="account" translatable="false">Account</string>
    <string name="tail">Tail</string>
    <string name="scopes">Scopes</string>
    <string name="length">Length</string>
    <string name="password_successfully_copied">Password successfully copied!</string>
    <string name="password_successfully_created">Password successfully created</string>
    <string name="clear">Clear</string>
    <string name="you_must_fill_the_tail_field_first">You must fill the tail field first</string>
    <string name="scopes_must_be_divided_by">Scopes must be divided by ,</string>
    <string name="required">Required*</string>
    <string name="password_length_input_error">The password length must be between 8 and 32 characters length</string>
    <string name="you_must_fill_the_length_field_first">You must fill the length field first</string>
    <string name="tail_is_required">Tail is required</string>
    <string name="length_is_required">Length is required</string>
    <string name="invalid_length">Invalid length</string>
    <string name="tail_hint">Tail for the password es. TraderBot</string>
    <string name="scopes_hint">Scopes where use the password es. Tecknobit, GitHub, …</string>
    <string name="length_hint">Length of the password to create</string>
    <string name="password" translatable="false">Password</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_hint">Custom password to insert in Glider</string>
    <string name="password_inserted_successfully">Password inserted successfully</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="new_scope">New scope</string>
    <string name="scope_hint">New scope to add to this password</string>
    <string name="add_more">Add more</string>
    <string name="new_scope_is_required">New scope is required</string>
    <string name="scope_must_be_filled">The edited scope must be filled</string>
    <string name="edit_the_current_scope">Edit the current scope</string>
    <string name="the_scope_edited">The edited scope</string>
    <string name="no_scopes_for_this_password">No scopes for this password</string>
    <string name="recover">Recover</string>
    <string name="new_scope_inserted_successfully">New scope inserted successfully</string>
    <string name="current_scope_edited_successfully">Current scope edited successfully</string>
    <string name="filter_by_tail_or_scopes">Filter by tail or scopes</string>
    <string name="no_passwords_available">No passwords available</string>
    <string name="by_tecknobit" translatable="false">by Tecknobit</string>
    <string name="address">Address:</string>
    <string name="server_details">Server details</string>
    <string name="port">Port:</string>
    <string name="security">Security</string>
    <string name="single_use">Single use:</string>
    <string name="qr_code_login" translatable="false">QR Code login:</string>
    <string name="devices">Devices</string>
    <string name="account_actions">Account actions</string>
    <string name="blacklist" translatable="false">Blacklist</string>
    <string name="disconnect">Disconnect</string>
    <string name="last_activity">Last activity:</string>
    <string name="login_date">Login date:</string>
    <string name="ip_address">Ip address:</string>
    <string name="host" translatable="false">Host</string>
    <string name="port_text">Port</string>
    <string name="connect">Connect</string>
    <string name="host_is_required">Host is required</string>
    <string name="host_port_is_required">Host port is required</string>
    <string name="host_hint">Host address where you started the Glider\'s service</string>
    <string name="host_port_hint">Host port where you started the Glider\'s service</string>
    <string name="password_connect_hint">Password you choose to connect to the service</string>
    <string name="see_this_project_on">See this project on</string>
    <string name="new_version_available">New version available!</string>
    <string name="keep_this_version">KEEP THIS VERSION</string>
    <string name="update">Update</string>
    <string name="exit">Exit</string>
    <string name="new_patch_available">New patch available!</string>
    <string name="only_in_localhost">Only in localhost:</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="scope">Scope</string>
    <string name="scope_removed_successfully">Scope removed successfully</string>
    <string name="qrcode_reading_error">Error during the reading of the QR CODE</string>
    <string name="insert_password">Insert password</string>
    <string name="insert_password_message">Insert the password to connect to your Glider\'s service</string>
    <string name="dismiss">Dismiss</string>
    <string name="ope_failed">Operation failed</string>
    <string name="qrcode_prompt">Scan your Glider\'s QR Code to get the credentials</string>
    <string name="unblacklist" translatable="false">UNBLACKLIST</string>
    <string name="password_successfully_deleted">Password successfully deleted</string>
    <string name="password_successfully_recovered">Password successfully recovered</string>
    <string name="device_blacklisted_successfully">Device blacklisted successfully</string>
    <string name="device_unblacklisted_successfully">Device unblacklisted successfully</string>
    <string name="device_disconnected_successfully">Device disconnected successfully</string>
    <string name="this_device_has_been_disconnected">This device has been disconnected</string>
    <string name="the_session_has_been_deleted">The session has been deleted</string>
    <string name="account_deletion">Account deletion</string>
    <string name="account_deletion_message">This will delete permanently all the data of the account and all the passwords will be unrecoverable, proceed?</string>
    <string name="proceed">Proceed</string>
    <string name="change_language">Change language</string>
    <string name="you_are_not_authorized">You are not authorized</string>
    <string name="permission">Permission:</string>
    <string name="permission_for_the_device_changed_successfully">Permission for the device changed successfully</string>
</resources>