<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/create" />

    <item
        android:id="@+id/navigation_insert"
        android:icon="@drawable/ic_baseline_create_24"
        android:title="@string/insert" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_baseline_playlist_add_check_24"
        android:title="@string/passwords" />

    <item
        android:id="@+id/navigation_removed"
        android:icon="@drawable/ic_baseline_restore_24"
        android:title="@string/removed" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_manage_accounts_24"
        android:title="@string/account" />

</menu>