<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_create">

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.tecknobit.glider.ui.fragments.passwordmanager.CreateFragment"
        android:label="@string/create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_insert"
        android:name="com.tecknobit.glider.ui.fragments.passwordmanager.InsertFragment"
        android:label="@string/insert"
        tools:layout="@layout/fragment_insert" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.tecknobit.glider.ui.fragments.ListFragment"
        android:label="@string/passwords"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_removed"
        android:name="com.tecknobit.glider.ui.fragments.ListFragment"
        android:label="@string/removed"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.tecknobit.glider.ui.fragments.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

</navigation>