<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.Update">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/keepBnt"
                style="@style/ButtonLayout"
                android:text="@string/keep_this_version" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateBnt"
                style="@style/ButtonLayout"
                android:layout_below="@id/keepBnt"
                android:layout_marginTop="20dp"
                android:text="@string/update" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exitBnt"
                style="@style/ButtonLayout"
                android:layout_below="@id/updateBnt"
                android:layout_marginTop="20dp"
                android:text="@string/exit" />

        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/updateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/new_patch_available"
            android:textSize="22sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/versionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="?actionBarSize"
            android:text="v. 1.1.0"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>