<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FAFAF3F3"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp">

        <RelativeLayout
            android:id="@+id/relScope"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tailDivider"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/scopesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/scopes"
                    style="@style/PasswordItem"
                    android:text="@string/scopes"
                    android:inputType="none"
                    android:labelFor="@id/scopesLayout"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextLayout"
                android:id="@+id/scopeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:visibility="gone"
                app:counterEnabled="false"
                app:endIconMode="clear_text"
                app:helperText="@string/scope_hint"
                app:helperTextTextColor="@color/primary"
                app:startIconDrawable="@drawable/ic_baseline_add_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/scope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordLayout"
            android:layout_marginTop="5dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteBtn"
                style="@style/ReverseButtonLayout"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:text="@string/delete" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actionBtn"
                style="@style/ReverseButtonLayout"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_alignParentEnd="true"
                android:text="@string/copy"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:id="@+id/tailDivider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/tail"
            android:background="@color/background" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relScope"
            android:layout_marginTop="5dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primary">

            <AutoCompleteTextView
                android:id="@+id/password"
                style="@style/PasswordItem"
                android:password="true"
                android:text="@string/password"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tail"
            android:textSize="20sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>