<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GliderCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp">

        <RelativeLayout
            android:id="@+id/relName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/deviceIconType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_baseline_smartphone_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/deviceName"
                android:layout_width="match_parent"
                android:layout_toStartOf="@id/deviceIconType"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:maxLines="1"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:id="@+id/nameDivider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/relName"
            android:background="@color/background" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ipAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameDivider"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ip_address"
            android:textSize="18sp" />

        <View
            android:id="@+id/ipDivider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/ipAddress"
            android:background="@color/background" />

        <RelativeLayout
            android:id="@+id/relPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ipAddress"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/permissionKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/changePermissionSpinner"
                android:layout_toEndOf="@id/permissionKey"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:textSize="16.5sp" />

            <Spinner
                style="@style/GliderSpinner"
                android:id="@+id/changePermissionSpinner"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <View
            android:id="@+id/permissionDivider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/relPermission"
            android:background="@color/background" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/permissionDivider"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login_date"
            android:textSize="18sp" />

        <View
            android:id="@+id/loginDateDivider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/loginDate"
            android:background="@color/background" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lastActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginDateDivider"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/last_activity"
            android:textSize="18sp" />

        <View
            android:id="@+id/lastActivityDivider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/lastActivity"
            android:background="@color/background" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/unblacklistBtn"
            style="@style/ReverseButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@id/lastActivity"
            android:layout_centerHorizontal="true"
            android:text="@string/unblacklist"
            android:textSize="16sp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/relActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastActivity">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/blackListBtn"
                style="@style/ReverseButtonLayout"
                android:layout_width="160dp"
                android:layout_height="55dp"
                android:text="@string/blacklist"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/disconnectBtn"
                style="@style/ReverseButtonLayout"
                android:layout_width="160dp"
                android:layout_height="55dp"
                android:layout_alignParentEnd="true"
                android:text="@string/disconnect"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>